Bug 127863 - Crash when trying to edit macro assigned part for a button
Summary: Crash when trying to edit macro assigned part for a button
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.4.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2019-09-29 11:04 UTC by Julien Nabet
Modified: 2019-09-29 15:14 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (10.98 KB, text/plain)
2019-09-29 11:05 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-09-29 11:04:40 UTC
Description:
On pc Debian x86-64 with master sources updated today + enable-dbgutil, I got a crash when trying to edit macro assignment for a button in a form.

Steps to Reproduce:
1. Retrieve file https://bugs.documentfoundation.org/attachment.cgi?id=112417
2. Open the file
3. Edit "Form"
4. Right click "Hobby" line
5. Ungroup
6. Right click Listbox from Hobby line
7. Click "Events" tab
8. click "..." button in line "Text modified"

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Julien Nabet 2019-09-29 11:05:38 UTC
Created attachment 154638 [details]
bt with debug symbols
Comment 2 Julien Nabet 2019-09-29 11:58:59 UTC
I don't reproduce this with LO Debian package 6.3.2.2
Comment 3 Julien Nabet 2019-09-29 14:32:05 UTC
https://gerrit.libreoffice.org/#/c/79812/
Comment 4 Commit Notification 2019-09-29 15:07:02 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/725b51044b955946c6528ca08a8a36dc44f09cd8

tdf#127863: fix crash when trying to edit assigned macro to a button

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.