tdf#127863: fix crash when trying to edit assigned macro to a button

see bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=154638

Let's avoid iterator use here to avoid invalid iterator in debug mode
+ slight formatting

Change-Id: I40b42201ad299aee33275b2c961e1e0233f86ad4
Reviewed-on: https://gerrit.libreoffice.org/79812
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>